--- a/index.html
+++ b/index.html
@@ -18,14 +18,53 @@
 
 </head>
 
-<header>
-    <div class="container">
-        <img src="logo3.png" class="elemento">
-    </div>
-</header>
+
 
 
 <body>
+    <header>
+        <div class="container">
+            <img src="logo3.png" class="elemento">
+        </div>
+    <nav class="menu-lateral">
+        <ul>
+            <li class="item-menu">
+                <button class="icon botao"><i class="bi bi-list"></i></button>
+            </li>
+            <li class="item-menu">
+                <a href="index.html">
+                    <span class="icon"><i class="bi bi-house"></i></span>
+                    <span class="txt-link">Home</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="trabalhos.html">
+                    <span class="icon"><i class="bi bi-image"></i></span>
+                    <span class="txt-link">Trabalhos</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="sobre.html">
+                    <span class="icon"><i class="bi bi-columns-gap"></i></span>
+                    <span class="txt-link">Sobre</span>
+                </a>
+            </li>
+            <li class="item-menu">
+                <a href="loc.html">
+                    <span class="icon"><i class="bi bi-geo-alt"></i></span>
+                    <span class="txt-link">Localização</span>
+                </a>
+            <li class="item-menu">
+                <a href="nos.html">
+                    <span class="icon"><i class="bi bi-people-fill"></i></span>
+                    <span class="txt-link">Nós</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+
 
 
     <section class="principal">
@@ -73,6 +112,80 @@
 
 
 
+<section class="container-video">
+    <iframe class="video" src="https://www.youtube.com/embed/6oYvwf1dXDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</section>
+
+
+
+
+
+<section>
+    <div class="container">
+        <div class="member">
+          <img src="marya.png" alt="Membro 1">
+          <h2>Marya Victoria</h2>
+          <p>Papel: Líder de Projeto</p>
+          <div class="social-links">
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+            <a href="#">LinkedIn</a>
+          </div>
+        </div>
+        <div class="member">
+            <img src="isa.png" alt="Membro 1">
+            <h2>Isadora</h2>
+            <p>Papel: Líder de Projeto</p>
+            <div class="social-links">
+              <a href="#">Facebook</a>
+              <a href="#">Twitter</a>
+              <a href="#">LinkedIn</a>
+            </div>
+          </div>
+          <div class="member">
+            <img src="bella.png" alt="Membro 1">
+            <h2>Isabella</h2>
+            <p>Papel: Líder de Projeto</p>
+            <div class="social-links">
+              <a href="#">Facebook</a>
+              <a href="#">Twitter</a>
+              <a href="#">LinkedIn</a>
+            </div>
+          </div>
+          <div class="member">
+            <img src="anna.png" alt="Membro 1">
+            <h2>Anna Luiza</h2>
+            <p>Papel: Líder de Projeto</p>
+            <div class="social-links">
+              <a href="#">Facebook</a>
+              <a href="#">Twitter</a>
+              <a href="#">LinkedIn</a>
+            </div>
+          </div>
+          <div class="member">
+            <img src="leo.png" alt="Membro 1">
+            <h2>Leonardo</h2>
+            <p>Papel: Líder de Projeto</p>
+            <div class="social-links">
+              <a href="#">Facebook</a>
+              <a href="#">Twitter</a>
+              <a href="#">LinkedIn</a>
+            </div>
+          </div>
+          <div class="member">
+            <img src="gab.png" alt="Membro 1">
+            <h2>Gabriel</h2>
+            <p>Papel: Líder de Projeto</p>
+            <div class="social-links">
+              <a href="#">Facebook</a>
+              <a href="#">Twitter</a>
+              <a href="#">LinkedIn</a>
+            </div>
+          </div>
+        <!-- ... Outros membros ... -->
+      </div>
+</section>
+
 
 
 
@@ -87,63 +200,41 @@
             <a href="politica-de-privacidade">Política de Privacidade</a>
           </div>
         <div class="social-icons">
-          <a href="link-para-facebook"><img src="facebook-icon.png" alt="Facebook"></a>
-          <a href="link-para-instagram"><img src="instagram-icon.png" alt="Instagram"></a>
-          <a href="link-para-twitter"><img src="twitter-icon.png" alt="Twitter"></a>
+          <a href="https://github.com/"><i class="bi bi-github"></i></a>
+          <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+          <a href="https://twitter.com/Twitter"><i class="bi bi-twitter"></i></a>
         </div>
       </div>
       <div>
-        <p class="copyright">&copy; Copyright Barbearia Alura</p>
+        <p class="copyright">&copy; Grupo de Robótica. Todos os direitos reservados.</p>
       </div>
 </footer>
 
 
 
+<a href="#top" class="botao-flutuante">Voltar ao Topo</a>
 
 
 
 
+<script>
+    const members = document.querySelectorAll('.member');
 
-        <nav class="menu-lateral">
-            <ul>
-                <li class="item-menu">
-                    <button class="icon botao"><i class="bi bi-list"></i></button>
-                </li>
-                <li class="item-menu">
-                    <a href="index.html">
-                        <span class="icon"><i class="bi bi-house"></i></span>
-                        <span class="txt-link">Home</span>
-                    </a>
-                </li>
-                <li class="item-menu">
-                    <a href="trabalhos.html">
-                        <span class="icon"><i class="bi bi-image"></i></span>
-                        <span class="txt-link">Trabalhos</span>
-                    </a>
-                </li>
-                <li class="item-menu">
-                    <a href="sobre.html">
-                        <span class="icon"><i class="bi bi-columns-gap"></i></span>
-                        <span class="txt-link">Sobre</span>
-                    </a>
-                </li>
-                <li class="item-menu">
-                    <a href="loc.html">
-                        <span class="icon"><i class="bi bi-geo-alt"></i></span>
-                        <span class="txt-link">Localização</span>
-                    </a>
-                <li class="item-menu">
-                    <a href="nos.html">
-                        <span class="icon"><i class="bi bi-people-fill"></i></span>
-                        <span class="txt-link">Nós</span>
-                    </a>
-                </li>
-            </ul>
+    members.forEach(member => {
+      member.addEventListener('mouseenter', () => {
+        member.classList.add('hovered');
+      });
+      member.addEventListener('mouseleave', () => {
+        member.classList.remove('hovered');
+      });
+    });
 
-        </nav>
-
-   
-
+    setTimeout(() => {
+      members.forEach(member => {
+        member.classList.add('loaded');
+      });
+    }, 500);
+  </script>
 
 
 
