--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
 <section class="container-video">
-    <iframe class="video" src="https://www.youtube.com/embed/6oYvwf1dXDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe class="video" src="https://www.youtube.com/embed/6oYvwf1dXDo" width="1000" height="700" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
 
 
@@ -121,7 +121,7 @@
 
 
 <section>
-    <div class="container">
+    <div class="container-membros">
         <div class="member">
           <img src="marya.png" alt="Membro 1">
           <h2>Marya Victoria</h2>
