--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="container2">
             <img class="polaroid" src="image.jpg" alt="foto do projeto...">
-            <h3 class="descricao">BUZZER PASSIVO: O Buzzer Passivo tem como característica a possibilidade de controle de frequência, variação das notas musicais e duração do tempo e som. Em sua estrutura há uma célula piezoelétrica que vibra de acordo com o sinal aplicado em seus terminais, produzindo o som. </h3>
+            <h3 class="descricao">BUZZER PASSIVO: O Buzzer Passivo tem como característica a possibilidade de controle de frequência, variação das notas musicais e duração do tempo e som. 
         </div>
         <div class="container2">
             <img class="polaroid" src="sinallfoto.jpg" alt="foto do projeto semáforo simples">
@@ -192,7 +192,7 @@
 <footer>
     <div class="footer">
         <div class="logo">
-          <img src="logo3.png" alt="Sua Logo">
+          <img src="logo3.png" alt="Logo">
         </div>
         <div class="links">
             <a href="contato">Contato</a>
