--- a/index.html
+++ b/index.html
@@ -15,80 +15,52 @@
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Geologica&display=swap" rel="stylesheet">
-
 </head>
-
-
-
 
 <body>
     <header>
+      <!-- logo -->
         <div class="container">
             <img src="logo3.png" class="elemento">
         </div>
-    <nav class="menu-lateral">
-        <ul>
-            <li class="item-menu">
-                <button class="icon botao"><i class="bi bi-list"></i></button>
-            </li>
-            <li class="item-menu">
-                <a href="index.html">
-                    <span class="icon"><i class="bi bi-house"></i></span>
-                    <span class="txt-link">Home</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="trabalhos.html">
-                    <span class="icon"><i class="bi bi-image"></i></span>
-                    <span class="txt-link">Trabalhos</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="sobre.html">
-                    <span class="icon"><i class="bi bi-columns-gap"></i></span>
-                    <span class="txt-link">Sobre</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="loc.html">
-                    <span class="icon"><i class="bi bi-geo-alt"></i></span>
-                    <span class="txt-link">Localização</span>
-                </a>
-            <li class="item-menu">
-                <a href="nos.html">
-                    <span class="icon"><i class="bi bi-people-fill"></i></span>
-                    <span class="txt-link">Nós</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+        <div class="container-menu">
+          <nav class="menu-lateral">
+              <div class="logo">
+                  <i class="bi bi-box"></i>
+                  <span class="logo-text">D-Boots</span>
+              </div>
+              <ul class="menu-list">
+                  <li class="item-menu">
+                      <a href="#"><i class="bi bi-house-door"></i><span class="menu-label">Home</span></a>
+                  </li>
+                  <li class="item-menu">
+                      <a href="#"><i class="bi bi-file-person"></i><span class="menu-label">Sobre</span></a>
+                  </li>
+                  <li class="item-menu">
+                      <a href="#"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
+                  </li>
+                  <li class="item-menu">
+                      <a href="#"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
+                  </li>
+              </ul>
+          </nav>
+
+      </div>
+      
 </header>
 
-
-
-
     <section class="principal">
+      <!-- robo -->
                <div><img class="center" src="robo3.png" alt="imagem de um robo"></div>
         <div>
+          <!-- caixa de texto tela inicial -->
             <p class="nosso-nome">D-Boots</p>
-            <p class="descricao-texto">A d-boots é um grupo de alunos que tem como objetivo crescerem no mundo da tecnologia.
-                Neste site, teremos todos os nossos trabalhos, localização e também falaremos um pouco sobre o que queremos.
+            <p class="descricao-texto"> Bem-vindo ao universo empolgante da robótica, onde a imaginação encontra a tecnologia para criar inovações incríveis! Nosso grupo de seis estudantes de robótica está entusiasmado em compartilhar nossas paixões, projetos e atraídos neste espaço dedicado aos avanços mais recentes em tecnologia robótica.
             </p>
         </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- fotos polaroid -->
     <section class="fotos">
         <h2 class="trabalhos">Nossos Trabalhos</h2>
         <div class="div-fotos">
@@ -110,16 +82,21 @@
     </div>
 </section>
 
-
-
+<!-- video -->
 <section class="container-video">
     <iframe class="video" src="https://www.youtube.com/embed/6oYvwf1dXDo" width="1000" height="700" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
 
+<section class="texto-foto.praticando">
+  <div class="section">
+    <div class="section-background"></div>
+    <div class="content">
+      <p>Se você é apaixonado por inovação, tecnologia e robótica, junte-se a nós nessa jornada emocionante! Fique à vontade para explorar nossos projetos, ler nossos artigos técnicos e acompanhar nosso progresso. Se quiser colaborar, aprender ou simplesmente compartilhar ideias, entre em contato! Juntos, podemos construir um futuro movido pela criatividade e pela ciência. <br> Bem-vindo ao Universo Inovarobotics, onde o futuro é moldado por mãos robóticas e mentes brilhantes!</p>
+    </div>
+  </div>
+</section>
 
-
-
-
+<!-- membros -->
 <section>
     <div class="container-membros">
         <div class="member">
@@ -182,41 +159,35 @@
               <a href="#">LinkedIn</a>
             </div>
           </div>
-        <!-- ... Outros membros ... -->
       </div>
 </section>
 
-
-
-
+<!-- rodape -->
 <footer>
-    <div class="footer">
-        <div class="logo">
-          <img src="logo3.png" alt="Logo">
-        </div>
-        <div class="links">
-            <a href="contato">Contato</a>
-            <a href="termos-de-uso">Termos de Uso</a>
-            <a href="politica-de-privacidade">Política de Privacidade</a>
-          </div>
-        <div class="social-icons">
-          <a href="https://github.com/"><i class="bi bi-github"></i></a>
-          <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
-          <a href="https://twitter.com/Twitter"><i class="bi bi-twitter"></i></a>
-        </div>
-      </div>
-      <div>
-        <p class="copyright">&copy; Grupo de Robótica. Todos os direitos reservados.</p>
-      </div>
+  <div class="footer">
+    <div class="logo">
+      <img src="logo3.png" alt="Logo">
+    </div>
+    <div class="links">
+      <a href="contato">Contato</a>
+      <a href="termos-de-uso">Termos de Uso</a>
+      <a href="politica-de-privacidade">Política de Privacidade</a>
+    </div>
+    <div class="social-icons">
+      <a href="https://github.com/Bellitah/robotica"><i class="bi bi-github"></i></a>
+      <a href="https://www.instagram.com/d_boots_/"><i class="bi bi-instagram"></i></a>
+      <a href="https://twitter.com/Twitter"><i class="bi bi-twitter"></i></a>
+    </div>
+  </div>
+  <div>
+    <p class="copyright">&copy; Grupo de Robótica. Todos os direitos reservados.</p>
+  </div>
 </footer>
 
-
-
+<!-- botao flutuante -->
 <a href="#top" class="botao-flutuante">Voltar ao Topo</a>
 
-
-
-
+<!-- javascript -->
 <script>
     const members = document.querySelectorAll('.member');
 
@@ -236,9 +207,6 @@
     }, 500);
   </script>
 
-
-
-    <script src="menu.js"></script>
 </body>
 
 </html>
