--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <section>
     <div class="container-membros">
         <div class="member">
-          <img src="marya.png" alt="Membro 1">
+          <img class="img-membros" src="marya.png" alt="Membro 1">
           <h2>Marya Victoria</h2>
           <p>Papel: Líder de Projeto</p>
           <div class="social-links">
