--- a/sobre.html
+++ b/sobre.html
@@ -16,10 +16,31 @@
     <body>
     
         <header>
-            <!-- <p class="nosso-nome"> D-Boots</p>  -->
+            <!-- logo -->
             <div class="container">
-                <img src="logo.png" class="elemento">
-                </div>
+                <img src="logo3.png" class="elemento">
+            </div>
+              <div class="container-menu">
+                <nav class="menu-lateral">
+                    <div class="logo">
+                        <i class="bi bi-box"></i>
+                        <span class="logo-text">D-Boots</span>
+                    </div>
+                    <ul class="menu-list">
+                        <li class="item-menu">
+                            <a href="index.html"><i class="bi bi-house-door"></i><span class="menu-label">Home</span></a>
+                        </li>
+                        <li class="item-menu">
+                            <a href="loc.html"><i class="bi bi-file-person"></i><span class="menu-label">Nossa Localização</span></a>
+                        </li>
+                        <li class="item-menu">
+                            <a href="trabalhos.html"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
+                        </li>
+                        <li class="item-menu">
+                            <a href="sobre.html"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </header>
 
