--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=100%, initial-scale=1.0">
-    <link rel="Website icon" type="png" href="logo2.png">
+    <link rel="Website icon" type="png" href="img/logo2.png">
     <title>Robótica</title>
 
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="menu.js">
     <link rel="stylesheet" href="abas-style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
@@ -20,9 +19,9 @@
 <body>
     <header>
       <!-- logo -->
-        <div class="container">
-            <img src="logo3.png" class="elemento">
-        </div>
+      <div class="container">
+          <img src="img/logo3.png" class="elemento">
+      </div>
         <div class="container-menu">
           <nav class="menu-lateral">
               <div class="logo">
@@ -31,27 +30,25 @@
               </div>
               <ul class="menu-list">
                   <li class="item-menu">
-                      <a href="#"><i class="bi bi-house-door"></i><span class="menu-label">Home</span></a>
+                      <a href="index.html"><i class="bi bi-house-door"></i><span class="menu-label">Home</span></a>
                   </li>
                   <li class="item-menu">
-                      <a href="#"><i class="bi bi-file-person"></i><span class="menu-label">Sobre</span></a>
+                      <a href="loc.html"><i class="bi bi-file-person"></i><span class="menu-label">Nossa Localização</span></a>
                   </li>
                   <li class="item-menu">
-                      <a href="#"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
+                      <a href="trabalhos.html"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
                   </li>
                   <li class="item-menu">
-                      <a href="#"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
+                      <a href="sobre.html"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
                   </li>
               </ul>
           </nav>
-
       </div>
-      
-</header>
+  </header>
 
     <section class="principal">
       <!-- robo -->
-               <div><img class="center" src="robo3.png" alt="imagem de um robo"></div>
+               <div><img class="center" src="img/robo3.png" alt="imagem de um robo"></div>
         <div>
           <!-- caixa de texto tela inicial -->
             <p class="nosso-nome">D-Boots</p>
@@ -65,15 +62,15 @@
         <h2 class="trabalhos">Nossos Trabalhos</h2>
         <div class="div-fotos">
         <div class="container2">
-            <img class="polaroid" src="fototra.jpg" alt="foto do projeto da onda verde">
+            <img class="polaroid" src="#" alt="foto do projeto da onda verde">
             <h3 class="descricao">Onda Verde</h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="image.jpg" alt="foto do projeto...">
+            <img class="polaroid" src="#" alt="foto do projeto...">
             <h3 class="descricao">BUZZER PASSIVO: O Buzzer Passivo tem como característica a possibilidade de controle de frequência, variação das notas musicais e duração do tempo e som. 
         </div>
         <div class="container2">
-            <img class="polaroid" src="sinallfoto.jpg" alt="foto do projeto semáforo simples">
+            <img class="polaroid" src="#" alt="foto do projeto semáforo simples">
             <h3 class="descricao">SEMÁFORO CARRO E PEDESTRES: Este projeto visa a demonstrar como
                 funciona a sincronização entre os semáforos
                 para motoristas e para pedestres. </h3>
@@ -100,7 +97,7 @@
 <section>
     <div class="container-membros">
         <div class="member">
-          <img class="img-membros" src="marya.png" alt="Membro 1">
+          <img class="img-membros" src="img/marya.png" alt="Membro 1">
           <h2>Marya Victoria</h2>
           <p>Papel: Líder de Projeto</p>
           <div class="social-links">
@@ -110,7 +107,7 @@
           </div>
         </div>
         <div class="member">
-            <img src="isa.png" alt="Membro 1">
+            <img src="img/isa.png" alt="Membro 1">
             <h2>Isadora</h2>
             <p>Papel: Líder de Projeto</p>
             <div class="social-links">
@@ -120,7 +117,7 @@
             </div>
           </div>
           <div class="member">
-            <img src="bella.png" alt="Membro 1">
+            <img src="img/bella.png" alt="Membro 1">
             <h2>Isabella</h2>
             <p>Papel: Líder de Projeto</p>
             <div class="social-links">
@@ -130,7 +127,7 @@
             </div>
           </div>
           <div class="member">
-            <img src="anna.png" alt="Membro 1">
+            <img src="img/anna.png" alt="Membro 1">
             <h2>Anna Luiza</h2>
             <p>Papel: Líder de Projeto</p>
             <div class="social-links">
@@ -140,7 +137,7 @@
             </div>
           </div>
           <div class="member">
-            <img src="leo.png" alt="Membro 1">
+            <img src="img/leo.png" alt="Membro 1">
             <h2>Leonardo</h2>
             <p>Papel: Líder de Projeto</p>
             <div class="social-links">
@@ -150,7 +147,7 @@
             </div>
           </div>
           <div class="member">
-            <img src="gab.png" alt="Membro 1">
+            <img src="img/gab.png" alt="Membro 1">
             <h2>Gabriel</h2>
             <p>Papel: Líder de Projeto</p>
             <div class="social-links">
@@ -166,7 +163,7 @@
 <footer>
   <div class="footer">
     <div class="logo">
-      <img src="logo3.png" alt="Logo">
+      <img src="img/logo3.png" alt="Logo">
     </div>
     <div class="links">
       <a href="contato">Contato</a>
@@ -207,6 +204,5 @@
     }, 500);
   </script>
 
-</body>
-
+  </body>
 </html>
