--- a/loc.html
+++ b/loc.html
@@ -13,17 +13,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
 
 </head>
-
-
-<header>
-    <div class="container">
-        <img src="logo3.png" class="elemento">
-    </div>
-</header>
-
-
-
 <body>
+    <header>
+        <!-- logo -->
+          <div class="container">
+              <img src="logo3.png" class="elemento">
+          </div>
+          <div class="container-menu">
+            <nav class="menu-lateral">
+                <div class="logo">
+                    <i class="bi bi-box"></i>
+                    <span class="logo-text">D-Boots</span>
+                </div>
+                <ul class="menu-list">
+                    <li class="item-menu">
+                        <a href="index.html"><i class="bi bi-house-door"></i><span class="menu-label">Home</span></a>
+                    </li>
+                    <li class="item-menu">
+                        <a href="loc.html"><i class="bi bi-file-person"></i><span class="menu-label">Nossa Localização</span></a>
+                    </li>
+                    <li class="item-menu">
+                        <a href="trabalhos.html"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
+                    </li>
+                    <li class="item-menu">
+                        <a href="sobre.html"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+  </header>
 
     <ul class="fale-conosco">
         <li>
@@ -36,45 +54,7 @@
 
     <div class="mapa-conteudo">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58642.35977306467!2d-51.130782161706485!3d-23.274090106585703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb46d75c807d61%3A0xd18b23db98a0e9aa!2sIbipor%C3%A3%2C%20PR%2C%2086200-000!5e0!3m2!1spt-BR!2sbr!4v1690805486733!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <nav class="menu-lateral">
-        <ul>
-            <li class="item-menu">
-                <a href="index.html">
-                    <span class="icon"><i class="bi bi-list"></i></span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="index.html">
-                    <span class="icon"><i class="bi bi-house"></i></span>
-                    <span class="txt-link">Home</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="trabalhos.html">
-                    <span class="icon"><i class="bi bi-image"></i></span>
-                    <span class="txt-link">Trabalhos</span>
-                </a>
-            </li>
-            <li class="item-menu">
-                <a href="sobre.html">
-                    <span class="icon"><i class="bi bi-columns-gap"></i></span>
-                    <span class="txt-link">Sobre</span>
-                </a>
-            </li>
-            <li class="item-menu ativo">
-            <a href="loc.html">
-                <span class="icon"><i class="bi bi-geo-alt"></i></span>
-                <span class="txt-link">Localização</span>
-            </a>
-            <li class="item-menu">
-                <a href="nos.html">
-                    <span class="icon"><i class="bi bi-people-fill"></i></span>
-                    <span class="txt-link">Nós</span>
-                </a>
-            </li>
-        </ul>
-    </nav>  
-   <script src="menu.js"></script>
+    </div>
 </body>
 </html>
 <!--     
