sobre.html agora se chama contato.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                       <a href="trabalhos.html"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
                   </li>
                   <li class="item-menu">
-                      <a href="sobre.html"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
+                      <a href="contato.html"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
                   </li>
               </ul>
           </nav>
