trabalho.html agora se chama portfolio.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                       <a href="loc.html"><i class="bi bi-file-person"></i><span class="menu-label">Nossa Localização</span></a>
                   </li>
                   <li class="item-menu">
-                      <a href="trabalhos.html"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
+                      <a href="portfolio.html"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
                   </li>
                   <li class="item-menu">
                       <a href="contato.html"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
