mudanças dos arquivos css e html para fazer sentido com a informação da side bar

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
           href="logo2.png">
     <title>Trabalhos</title>
 
-    <link rel="stylesheet" href="trabalhos-style.css">
+    <link rel="stylesheet" href="portfolio-style.css">
     <link rel="stylesheet" href="abas-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
     
