--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
           href="logo2.png">
     <title>Sobre</title>
 
-    <link rel="stylesheet" href="sobre-style.css">
+    <link rel="stylesheet" href="contato-style.css">
     <link rel="stylesheet" href="abas-style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">    </head>
