--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <header>
         <!-- logo -->
         <div class="container">
-            <img src="logo3.png" class="elemento">
+            <img src="img/logo3.png" class="elemento">
         </div>
           <div class="container-menu">
             <nav class="menu-lateral">
