link de contato no footer do index.html agora redireciona para a pagina de contato

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <img src="img/logo3.png" alt="Logo">
     </div>
     <div class="links">
-      <a href="contato">Contato</a>
+      <a href="/contato.html">Contato</a>
       <a href="termos-de-uso">Termos de Uso</a>
       <a href="politica-de-privacidade">Política de Privacidade</a>
     </div>
