--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
         <h2 class="trabalhos">Nossos Trabalhos</h2>
         <div class="div-fotos">
         <div class="container2">
-            <img class="polaroid" src="projetos" alt="foto do projeto da onda verde">
+            <img class="polaroid" src="projetos/potenciometro-simples.jpg" alt="foto do projeto da onda verde">
             <h3 class="descricao">Onda Verde</h3>
         </div>
         <div class="container2">
