--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             <h3 class="descricao">BUZZER PASSIVO: O Buzzer Passivo tem como característica a possibilidade de controle de frequência, variação das notas musicais e duração do tempo e som. Em sua estrutura há uma célula piezoelétrica que vibra de acordo com o sinal aplicado em seus terminais, produzindo o som. </h3>
         </div>
         <div class="container2">
-            <img class="polaroid" src="sinallfoto.jpg" alt="foto do projeto semáforo simples">
+            <img class="polaroid" src="projetos/praticando-robotica.jpg" alt="foto do projeto semáforo simples">
             <h3 class="descricao">SEMÁFORO CARRO E PEDESTRES: Este projeto visa a demonstrar como
                 funciona a sincronização entre os semáforos
                 para motoristas e para pedestres. </h3>
