--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                       <a href="loc.html"><i class="bi bi-file-person"></i><span class="menu-label">Nossa Localização</span></a>
                   </li>
                   <li class="item-menu">
-                      <a href="portfolio.html"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
+                      <a href="trabalhos.html"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
                   </li>
                   <li class="item-menu">
-                      <a href="contato.html"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
+                      <a href="sobre.html"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
                   </li>
               </ul>
           </nav>
@@ -48,7 +48,7 @@
 
     <section class="principal">
       <!-- robo -->
-               <div><img class="center" src="img/robo3.png" alt="imagem de um robo"></div>
+               <div><img class="center" src="img/robo2.jpg" alt="imagem de um robo"></div>
         <div>
           <!-- caixa de texto tela inicial -->
             <p class="nosso-nome">D-Boots</p>
@@ -166,7 +166,7 @@
       <img src="img/logo3.png" alt="Logo">
     </div>
     <div class="links">
-      <a href="/contato.html">Contato</a>
+      <a href="contato">Contato</a>
       <a href="termos-de-uso">Termos de Uso</a>
       <a href="politica-de-privacidade">Política de Privacidade</a>
     </div>
