padronização entre links e seções

--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
           href="logo2.png">
     <title>Sobre</title>
 
-    <link rel="stylesheet" href="contato-style.css">
+    <link rel="stylesheet" href="sobre-style.css">
     <link rel="stylesheet" href="abas-style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">    </head>
@@ -34,7 +34,7 @@
                             <a href="loc.html"><i class="bi bi-file-person"></i><span class="menu-label">Nossa Localização</span></a>
                         </li>
                         <li class="item-menu">
-                            <a href="portfolio.html"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
+                            <a href="trabalhos.html"><i class="bi bi-images"></i><span class="menu-label">Trabalhos</span></a>
                         </li>
                         <li class="item-menu">
                             <a href="contato.html"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
