--- a/trabalhos.html
+++ b/trabalhos.html
@@ -8,7 +8,7 @@
           href="logo2.png">
     <title>Trabalhos</title>
 
-    <link rel="stylesheet" href="portfolio-style.css">
+    <link rel="stylesheet" href="trabalhos-style.css">
     <link rel="stylesheet" href="abas-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
     
@@ -34,10 +34,11 @@
                         <a href="loc.html"><i class="bi bi-file-person"></i><span class="menu-label">Nossa Localização</span></a>
                     </li>
                     <li class="item-menu">
-                        <a href="portfolio.html"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
+                        <a href="trabalhos.html"><i class="bi bi-images"></i><span class="menu-label">Trabalhos
+                        </span></a>
                     </li>
                     <li class="item-menu">
-                        <a href="contato.html"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
+                        <a href="sobre.html"><i class="bi bi-envelope"></i><span class="menu-label">Sobre</span></a>
                     </li>
                 </ul>
             </nav>
