--- a/loc.html
+++ b/loc.html
@@ -33,10 +33,10 @@
                         <a href="loc.html"><i class="bi bi-file-person"></i><span class="menu-label">Nossa Localização</span></a>
                     </li>
                     <li class="item-menu">
-                        <a href="portfolio.html"><i class="bi bi-images"></i><span class="menu-label">Portfólio</span></a>
+                        <a href="trabalhos.html"><i class="bi bi-images"></i><span class="menu-label">Trabalhos</span></a>
                     </li>
                     <li class="item-menu">
-                        <a href="contato.html"><i class="bi bi-envelope"></i><span class="menu-label">Contato</span></a>
+                        <a href="sobre.html"><i class="bi bi-envelope"></i><span class="menu-label">Sobre</span></a>
                     </li>
                 </ul>
             </nav>
